[package]
name = "actix-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
futures-util = "0.3.28"

[dev-dependencies]
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
